--- a/index.html
+++ b/index.html
@@ -6,73 +6,70 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" href="Assets/favicon.ico" type="image/x-icon">
     <style>
-        /* Body background color with padding */
         body {
-            background-image: url('Assets/background.png'); /* Replace 'background.jpg' with your image file path */
-            background-size: cover; /* Cover the entire viewport */
-            background-repeat: no-repeat; /* Prevent the image from repeating */
-            background-attachment: fixed; /* Fixed background to prevent scrolling */
+            background-image: url('Assets/background.png');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
             margin: 0;
             padding: 20px;
             font-family: Arial, sans-serif;
             color: #000000;
         }
 
-        /* Add CSS styles for the topbar with margins */
         .topbar {
-            background-color: #222; /* Slightly darker black color */
+            background-color: #222;
             color: #fff;
             padding: 10px 0;
             text-align: center;
-            border-radius: 10px; /* Rounded corners */
-            border: 2px solid #fff; /* White stroke (border) */
-            margin: 10px 0; /* Add margins to create space between the topbar and the body */
-            transition: transform 0.3s ease-in-out; /* Smooth scaling effect */
+            border-radius: 10px;
+            border: 2px solid #fff;
+            margin: 10px 0;
+            transition: transform 0.3s ease-in-out;
         }
 
         .topbar:hover {
-            transform: scale(1.05); /* Enlarge the topbar on hover */
+            transform: scale(1.05);
         }
 
         .topbar a {
-            color: #ff0; /* Yellow hyperlink color */
+            color: #ff0;
             text-decoration: none;
             margin: 0 15px;
             font-weight: bold;
             font-size: 16px;
-            transition: color 0.3s ease-in-out; /* Smooth color transition */
+            transition: color 0.3s ease-in-out;
         }
 
         .topbar a:hover {
             text-decoration: underline;
-            color: #ff9; /* Lighter yellow on hover */
+            color: #ff9;
         }
 
-        /* Style for the "Home" section */
         #home {
-            text-align: center; /* Center-align the text in the section */
-            color: #fff; /* Set text color to white */
+            text-align: center;
+            color: #fff;
         }
 
         #home h2 {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Improved font for the heading */
-            font-size: 32px; /* Larger font size for the heading */
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 32px;
             font-weight: bold;
-            margin-bottom: 10px; /* Add some spacing below the heading */
+            margin-bottom: 10px;
         }
 
         #home p {
-            font-size: 18px; /* Larger font size for the paragraph */
-            line-height: 1.6; /* Adjust line height for better readability */
+            font-size: 18px;
+            line-height: 1.6;
         }
 
-        /* Style for the "Play" section (initially hidden) */
         #play,
         #about,
+        #socials,
         #contact {
-            display: none; /* Hide the sections initially */
+            display: none;
             text-align: center;
-            color: #fff; /* Set text color to white */
+            color: #fff;
         }
     </style>
 </head>
@@ -123,7 +120,6 @@
     </section>
 
     <script>
-        // JavaScript to show the corresponding section when its button is clicked
         document.getElementById("homeButton").addEventListener("click", function() {
             hideAllSections();
             document.getElementById("home").style.display = "block";
